--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "ba86c9c1-e229-463e-839d-65f938a3ec1b"
 authors = ["David A W Barton"]
 version = "1.0.0-DEV"
 
+[deps]
+FixedSizeArrays = "3821ddf9-e5b5-40d5-8e25-6813ab96b5e2"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
 [compat]
 julia = "1.10"
 
